frontend/test/should_fail/computations_return_termination_001.grg
var ::glob:int;

one() : int
{
	def var x:int = 42;
}


